@@ -112,9 +112,14 @@ var CloudCommander, Util, DOM;
                         
                         DOM.preventDefault(pEvent);//запрет на дальнейшее действие
                     }
-                    else if(lKeyCode === KEY.Delete)
-                        DOM.promptDeleteCurrent(lCurrentFile);
-                    
+                    else if(lKeyCode === KEY.Delete){
+                        if(pEvent.shiftKey)
+                            DOM.deleteCurrent(lCurrentFile);
+                        else
+                            DOM.promptDeleteCurrent(lCurrentFile);
+                    }
+                    else if(lKeyCode === KEY.F2)
+                        DOM.renameCurrentFile(lCurrentFile);
                     /* if f3 or shift+f3 or alt+f3 pressed */
                     else if(lKeyCode === KEY.F3){
                             var lEditor = CloudCmd[pEvent.shiftKey ? 
@@ -216,9 +221,8 @@ var CloudCommander, Util, DOM;
                     }
                     
                     /* если нажали Enter - открываем папку*/
-                    else if(lKeyCode === KEY.ENTER)
-                        if(DOM.isCurrentIsDir())
-                            Util.exec(CloudCmd._loadDir());
+                    else if(lKeyCode === KEY.ENTER && DOM.isCurrentIsDir())
+                        Util.exec(CloudCmd._loadDir());
                     
                     /* если нажали <ctr>+r
                      * обновляем страницу,
