@@ -28,9 +28,6 @@ var CloudFunc, exports;
     CloudFunc.LEFTPANEL       = 'left';
     CloudFunc.RIGHTPANEL      = 'right';
     
-    /* length of longest file name */
-    CloudFunc.SHORTNAMELENGTH = 16;
-    
     /**
      * Функция убирает последний слеш,
      * если он - последний символ строки
