@@ -180,6 +180,8 @@ generation of json of directory listing.
 
 * Added ability to delete files.
 
+* Added rename menu item.
+
 
 2012.12.12, Version 0.1.8
 
